--- a/tests/version-1.0/karate.yaml
+++ b/tests/version-1.0/karate.yaml
@@ -10,8 +10,8 @@ states:
     function: karate
     input:
       commands:
-      - command: java -DtestURL=jq(.ip) -DtestmeSecret=jq(.secrets.testmeSecret) -Djens=jq(.secrets.jens)
-          -jar /karate.jar test.feature
+      - command: java -DtestURL=jq(.host) -DtestmeSecret=jq(.secrets.testmeSecret)
+          -Djens=jq(.secrets.jens) -jar /karate.jar test.feature
       - command: cat target/karate-reports/karate-summary-json.txt
     secrets:
     - testmeSecret
